--- a/SiteCurriculo/package.json
+++ b/SiteCurriculo/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "mysql": "^2.18.1",
-    "node-modules": "^1.0.1"
+    "node-modules": "^1.0.1",
+    "nodemon": "^3.1.7"
   }
 }
