--- a/SiteCurriculo/package.json
+++ b/SiteCurriculo/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mysql": "^2.18.1",
     "node-modules": "^1.0.1",
     "nodemon": "^3.1.7"
